data/src/main/java/com/example/data/network/error/AlreadyUsedException.kt
package com.example.data.network.error

class AlreadyUsedException: RuntimeException()